fixed issue with oveflow-x not working on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,6 @@ Acknowledgement:
 }
 
 body {
-    overflow-x: hidden;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -174,6 +173,11 @@ a.non-clickable-link {
     transform: rotate(45deg);
 }
 
+header {
+    position: relative;
+    overflow-x: hidden;
+}
+
 header nav:has(#hamburger-bar:checked) .nav-links {
     right: 0px;
 }
@@ -209,8 +213,6 @@ header nav:has(#hamburger-bar:checked)::before {
     width: 100%;
     height: 720px;
     padding: 80px;
-    /* background: var(--Secondary-color); */
-    /* background: linear-gradient(187deg, rgba(192,228,255,1) 0%, rgba(118,189,227,1) 33%, rgba(44,138,185,1) 66%, rgba(5,102,144,1) 100%); */
 }
 
 .decorative-circle {
